--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.flyway.enabled=true
 
+webservice.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
+webservice.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
+webservice.raspay.v1.order=${RASPAY_ORDER:/v1/order}
+webservice.raspay.v1.payment=${RASPAY_PAYMENT:/v1/payment/credit-card/}
 
 
 
