Criada a camada de integração com email - após o pagamento é enviado um email para o cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,13 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.flyway.enabled=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=siluanaoggionidev@gmail.com
+spring.mail.password=grth alqb vtuv erpx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 webservice.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
 webservice.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
 webservice.raspay.v1.order=${RASPAY_ORDER:/v1/order}
