Avançando com a API configurando o Sprint Security e JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.mail.password=grth alqb vtuv erpx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 webservice.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
 webservice.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
 webservice.raspay.v1.order=${RASPAY_ORDER:/v1/order}
