Implementando o processo de autoriazação e validação do token a cada requisição

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,8 @@ webservice.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
 webservice.raspay.v1.order=${RASPAY_ORDER:/v1/order}
 webservice.raspay.v1.payment=${RASPAY_PAYMENT:/v1/payment/credit-card/}
 
+webservice.projectplus.jwt.expiration=3600000
+webservice.projectplus.jwt.secret=$2a$12$cJPaDyFLYoPtMScL3kmEMO.LlpcGLsefWDX8SKYHGpBtSlOA8c7d2
+
 
 
