Finalizado todo fluxo de cadastro com autenticação e autorizações

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,6 @@ webservice.raspay.v1.payment=${RASPAY_PAYMENT:/v1/payment/credit-card/}
 
 webservice.projectplus.jwt.expiration=3600000
 webservice.projectplus.jwt.secret=$2a$12$cJPaDyFLYoPtMScL3kmEMO.LlpcGLsefWDX8SKYHGpBtSlOA8c7d2
-
+webservice.projectplus.default.password=alunorasmoo
 
 
