Implementando o fluxo de recuperação de senha, utilizando o Redis para armazenar o código de recuperação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.flyway.enabled=true
@@ -33,5 +36,6 @@ webservice.raspay.v1.payment=${RASPAY_PAYMENT:/v1/payment/credit-card/}
 webservice.projectplus.jwt.expiration=3600000
 webservice.projectplus.jwt.secret=$2a$12$cJPaDyFLYoPtMScL3kmEMO.LlpcGLsefWDX8SKYHGpBtSlOA8c7d2
 webservice.projectplus.default.password=alunorasmoo
+webservice.projectplus.redis.recoverycode.timeout=5
 
 
