--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,8 @@
 spring.flyway.enabled=false
+
+#H2 Database Configuration for testing
+spring.datasource.test.url=jdbc:h2:mem/unit_test_db
+spring.datasource.test.diver-class-name=org.h2.Driver
+spring.datasource.test.username=sa
+spring.datasource.test.password=password
+spring.jpa.test.hibernate.ddl-auto = create-drop
