--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=ws-project-plus
 server.servlet.context-path=/ws-project-plus
 server.port=8082
 
+#MysQL Database Configuration for Project
 spring.datasource.url=jdbc:mysql://localhost:3306/RASPLUS
 spring.datasource.username=siluana
 spring.datasource.password=senha123
@@ -10,6 +11,8 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+
 
 spring.redis.host=localhost
 spring.redis.port=6379
