Configurado a documentação e o versionamento da API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ws-project-plus
-server.servlet.context-path=/ws-project-plus
+server.servlet.context-path=/ws-project-plus/v1
 server.port=8082
 
 #MysQL Database Configuration for Project
@@ -30,6 +30,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tags-sorter=alpha
 
 webservice.raspay.host=${RASPAY_HOST:http://localhost:8081/ws-raspay}
 webservice.raspay.v1.customer=${RASPAY_CUSTOMER:/v1/customer}
