--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,19 @@
 spring.application.name=ws-project-plus
 server.servlet.context-path=/ws-project-plus/v1
-server.port=8082
+server.port=${PORT:8082}
 
 #MysQL Database Configuration for Project
-spring.datasource.url=jdbc:mysql://localhost:3306/RASPLUS
-spring.datasource.username=siluana
-spring.datasource.password=senha123
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/RASPLUS}
+spring.datasource.username=${MYSQL_USERNAME:siluana}
+spring.datasource.password=${MYSQL_PASSWORD:senha123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-
-
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
 
 spring.jpa.properties.hibernate.show_sql=true
 
